--- a/src/main.css
+++ b/src/main.css
@@ -13,7 +13,7 @@ body {
 .booklist {
     width: 90vw;
     max-width: 1170px;
-    margin: 5rm auto;
+    margin: 5rem auto;
     display: grid;
     gap: 2rem;
 }
@@ -21,6 +21,7 @@ body {
 @media screen and (min-width:768px) {
     .booklist {
         grid-template-columns: repeat(3, 1fr);
+        align-items: start;
     }
 
     .book img {
@@ -51,4 +52,8 @@ body {
     color: #617d98;
     font: 0.75rem;
     margin-top: 0.5rem;
+}
+
+.book p {
+    margin: 1rem 0 0.5;
 }
